# interview-assistant-CLI

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  README.zh-CN.md  RELEASING.md  llms.txt  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
skills/homophone-detector/: SKILL.md
skills/homophone-detector/data/: hallucinations.toml  homophones.toml
skills/interview-knowledge-format/: SKILL.md
skills/interview-knowledge-format/templates/: example-qa.md
src/interview_assistant/: __init__.py  audio.py  audio_backend.py  cli.py  config.py  doctor.py  homophones.py  i18n.py  init_wizard.py  knowledge_tools.py  network.py  providers.py  qa.py  rag.py  skills.py  stt.py  stt_filter.py  theme.py
src/interview_assistant/locales/: en.yaml  zh-CN.yaml
templates/: knowledge.starter.md
tests/: test_smoke.py
